src/manifests/opa-constraints/osssecure/constraints.yaml
# Disallow latest tag
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: container-image-must-not-have-latest-tag
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "secure"
  parameters:
    tags: ["latest","master","prod"]
    # exemptImages: ["openpolicyagent/opa-exp:latest", "openpolicyagent/opa-exp2:latest"]
---
# Only allow images from todaywasawesome
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: repo-is-todaywasawesome
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "secure"
  parameters:
    repos:
      - "todaywasawesome/"
      - "docker.io/todaywasawesome/"
---
# Check for image signature
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sExternalDataCosign
metadata:
  name: cosign-gatekeeper-provider
spec:
  enforcementAction: deny
  match:
    namespaces:
      - "secure"
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
---
# # Require applicaitons deploy with ArgoProj, ex demo-accept-app:/Service:secure/summer-k8s-service-canary
# # To use this, set Argo CD tracking method to annotation or annotation+label. https://argo-cd.readthedocs.io/en/stable/user-guide/resource_tracking/
# apiVersion: constraints.gatekeeper.sh/v1beta1
# kind: K8sRequiredAnnotations
# metadata:
#   name: must-be-deployed-by-argocd
# spec:
#   enforcementAction: deny
#   match:
#     namespaces:
#       - "secure"
#     kinds:
#       - apiGroups: [""]
#         kinds: ["Service","Pod"]
#   parameters:
#     message: "All resources must have a `argocd.argoproj.io/tracking-id` annotation."
#     annotations:
#       - key: argocd.argoproj.io/tracking-id
#         # Matches annotation format
#         allowedRegex: ^[a-zA-Z0-9-]+:.+$
